# OpenTextProjector

./: .gitignore  CMakeLists.txt  Makefile  OpenTextProjector.cbp  OpenTextProjector.depend  OpenTextProjector.layout  OpenTextProjector.properties  OpenTextProjector.sln  OpenTextProjector.vcxproj  OpenTextProjector.vcxproj.filters  README.md  ScreenSource.cpp  ScreenSource.hh  main.cpp  main.h  vcpkg.json
includes/: config.h
includes/BasicUsageEnvironment/: Makefile
includes/MinGW/: _mingw.h  w32api.h  wchar.h
includes/UsageEnvironment/: Makefile
includes/freetype/: freetype.h  fttypes.h
includes/freetype/config/: ftconfig.h  ftoption.h
includes/groupsock/: Makefile  groupsock.mak
includes/libavcodec/: avcodec.lib
includes/libavcodec/libavcodec/: 4xm.d  aac_adtstoasc_bsf.d  aac_parser.d  aaccoder.d  aacdec.d  aacdec_fixed.d  aacenc_is.d  aacenc_ltp.d  aacenc_pred.d  aacenc_tns.d  aacenctab.d  aacps_common.d  aacpsy.d  aacsbr.d  aacsbr_fixed.d  aactab.d  ac3.d  ac3_channel_layout_tab.d  ac3_parser.d  ac3dec_data.d  ac3dec_fixed.d  ac3dec_float.d  ac3dsp.d  ac3enc.d  ac3enc_fixed.d  ac3enc_float.d  ac3tab.d  adts_header.d  aic.d  aliaspixenc.d  allcodecs.d  alsdec.d  amr_parser.d  asvdec.d  atrac.d  atrac3.d  atrac3plusdec.d  atrac9dec.d  av1_parser.d  av1dec.d  (+277 more)
includes/libavcodec/libavcodec/x86/: aacencdsp_init.d  ac3dsp_init.d  celt_pvq_init.d  dnxhdenc_init.d  exrdsp_init.d  h264_qpel.d  me_cmp_init.d  mpegvideo.d  mpegvideoenc.d  pngdsp_init.d  snowdsp.d  svq1enc_init.d
includes/libavutil/: avutil-57.def  avutil.lib  ffversion.h  libavutil.version
includes/libavutil/libavutil/: common.h
includes/libswresample/: libswresample.version  swresample.lib
includes/liveMedia/: Makefile  RTSPCommon.cpp  liveMedia.mak
includes/liveMedia/include/: TLSState.hh
libraries/: crypto.lib  libBasicUsageEnvironment.lib  libUsageEnvironment.lib  libgroupsock.lib  libliveMedia.lib  x264.lib
shaders/: fs.glsl  vs.glsl
src/: main.cpp
src/Controllers/: LoginController.cpp  LoginController.h  RegisterController.cpp  RegisterController.h  WebSocketController.cpp  WebSocketController.h
src/Core/: AppConfig.h  DIContainer.h
src/Models/: Command.h  User.h
src/Repositories/: UserRepository.cpp  UserRepository.h
src/Router/: AuthRouter.cpp  AuthRouter.h
src/Server/: AuthServer.cpp  AuthServer.h
src/Services/: AuthService.cpp  AuthService.h  CommandProcessor.cpp  CommandProcessor.h
src/System/: MonitorManager.cpp  MonitorManager.h  TextManager.cpp  TextManager.h  TextRenderer.cpp  TextRenderer.h
src/UI/: AppWindow.cpp  AppWindow.h
src/Util/: ThreadSafeQueue.h  qrcodegen.cpp  qrcodegen.hpp
tools/: RTSPServer.hpp  ScreenSource.hpp  TCPServer.cpp  TCPServer.h  concurrent_queue.hpp  encoder.hpp
tools/TextRenderer/: TextRenderer.cpp  TextRenderer.h
